lantern/elucid-language/src/snapshots/elucid_language__parser__tests__basic_literal_filter.snap
---
source: elucid-language/src/parser.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Where(
            Binary(
                Equal,
                Field(
                    "status",
                ),
                Number(
                    200.0,
                ),
            ),
        ),
    ],
}
