lantern/elucid-language/src/snapshots/elucid_language__parser__tests__basic_source.snap
---
source: elucid-language/src/parser.rs
expression: ast
---
Query {
    source: "test",
    commands: [],
}
