lantern/elucid-language/src/snapshots/elucid_language__parser__tests__math_precedence.snap
---
source: elucid-language/src/parser.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Where(
            Binary(
                GreaterThan,
                Binary(
                    Add,
                    Field(
                        "a",
                    ),
                    Binary(
                        Multiply,
                        Field(
                            "b",
                        ),
                        Field(
                            "c",
                        ),
                    ),
                ),
                Number(
                    10.0,
                ),
            ),
        ),
    ],
}
