lantern/elucid-language/src/snapshots/elucid_language__parser__tests__parenthesis_precedence.snap
---
source: elucid-language/src/parser.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Where(
            Binary(
                And,
                Binary(
                    Or,
                    Field(
                        "a",
                    ),
                    Field(
                        "b",
                    ),
                ),
                Field(
                    "c",
                ),
            ),
        ),
    ],
}
