lantern/elucid-language/src/snapshots/elucid_language__parser__tests__should_fail.snap
---
source: elucid-language/src/parser.rs
expression: ast.unwrap_err()
---
ParserError(
    [
        found 'Pipe' at 7..8 expected something else,
    ],
)
