lantern/elucid-language/src/snapshots/elucid_language__parser__tests__sort_mixed.snap
---
source: elucid-language/src/parser.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Sort(
            [
                SortExpression {
                    expression: Field(
                        "count",
                    ),
                    order: Descending,
                },
                SortExpression {
                    expression: Field(
                        "status",
                    ),
                    order: Ascending,
                },
                SortExpression {
                    expression: Field(
                        "time",
                    ),
                    order: Ascending,
                },
            ],
        ),
    ],
}
